--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/identificacao-ms?createDatabaseIfNotExist=true
+spring.datasource.username=${local_host}
+spring.datasource.password=${local_password}
+eureka.client.enabled=false
